2007-06-29  Moritz  <moritz@g10code.com>

	* BUGS: New file.
	* NEWS: Updated.

	* m4: New directory.
	* m4/libassuan.m4: New file.
	* configure.ac: Require libassuan.
	(AH_BOTTOM): Cleared, define GNUPG_DEFAULT_SCD.
	Use AM_PROG_CC_C_O.
	(AC_CONFIG_FILES): Added: m4/Makefile, src/scd-support/Makefile,
	src/scd/Makefile; removed: src/libscd/Makefile.

2007-03-03  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Integrate assuan; it's a new dependency from now
	on.

2005-12-12  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Bumped version number up to 0.4-cvs.

2005-12-11  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Now: bumped version number up to 0.3.

2005-12-10  Moritz Schulte  <moritz@g10code.com>

	* NEWS: Updated.

2005-12-03  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Undo last version number bumb; Poldi is not at
	v0.3 yet.

2005-10-29  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Bumped version number up to 0.3.
	* NEWS: Updated.

2005-10-22  Moritz Schulte  <moritz@g10code.com>

	* NEWS: Updated.

2005-10-19  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Check for functions: fopencookie, funopen.

2005-10-15  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Implement --with-pam-module-directory switch.

2005-10-08  Moritz Schulte  <moritz@g10code.com>

	* configure.ac (POLDI_CONF_DIRECTORY): Only set
	PAM_MODULE_DIRECTORY in case it is the empty string; Use libdir
	instead of hard-coded path.  This fixes `make distcheck', but it
	forces users who want to install the PAM module directly beneath
	/lib/security to set PAM_MODULE_DIRECTORY accordingly.
	* THANKS: Updated.
	* Makefile.am: Remove install-pam-module target.
	(install-conf-skeleton): New target: install-conf-skeleton.

2005-09-25  Moritz Schulte  <moritz@g10code.com>

	* conf: New directory.
	* configure.ac (AC_CONFIG_FILES): Added: conf/Makefile.am.
	* Makefile.am (SUBDIRS): Added: conf.
	* THANKS: updated.
