@@ -1,4 +1,4 @@
-# Copyright (C) 2004, 2005 g10 Code GmbH
+# Copyright (C) 2004, 2005, 2007 g10 Code GmbH
 #
 # This file is part of Poldi.
 #
@@ -17,7 +17,7 @@
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 # 02111-1307, USA
 
-SUBDIRS = src doc conf
+SUBDIRS = src doc conf am
 
 install-conf-skeleton:
 	$(MAKE) -C conf install-conf-skeleton
