@@ -1,0 +1,1 @@
+AM_CPPFLAGS += -DGNUPG_BINDIR="\"$(bindir)\""
